Back-end: correciones en desarrollo de  ms
